fix(list): fix styles to keep secondaryValue aligned when overflowing

--- a/packages/react/src/components/List/ListItem/_list-item.scss
+++ b/packages/react/src/components/List/ListItem/_list-item.scss
@@ -160,6 +160,7 @@
     width: 100%;
     height: 100%;
     align-items: center;
+    min-width: 0;
     &__large {
       align-items: flex-start;
     }
@@ -190,7 +191,6 @@
       }
       &--value {
         flex: 1;
-
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
